# kintone-rs

./: Cargo.toml  README.md  rustfmt.toml  sample.txt
examples/: add_comment.rs  add_form_field.rs  add_thread_comment.rs  basic_auth.rs  client_certificate.rs  create_app.rs  delete_comment.rs  download_file.rs  get_app_deploy_status.rs  get_comments.rs  get_field.rs  get_record.rs  get_records.rs  update_assignees.rs  update_status.rs  upload_and_download.rs  upload_file.rs
src/: client.rs  error.rs  internal.rs  lib.rs  middleware.rs  models.rs  v1.rs
src/internal/: convert.rs  serde_helper.rs
src/model/: mod.rs  record.rs  space.rs
src/model/app/: field.rs  mod.rs
src/models/: mod.rs  record.rs  space.rs
src/models/app/: field.rs
src/testdata/: record1.json
src/v1/: file.rs  mod.rs  record.rs  space.rs
src/v1/app/: form.rs  mod.rs  settings.rs
tests/: README.md  integration_test.rs
