[package]
name = "kintone"
version = "0.6.1"
edition = "2024"
license = "MIT"
authors = ["Yusuke Nojima <nojima@ynojima.com>"]
homepage = "https://github.com/nojima/kintone-rs"
repository = "https://github.com/nojima/kintone-rs"
description = "kintone REST API client"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
enum-assoc = "1"
http = "1"
log = "0.4"
mime = "0.3"
percent-encoding = "2.3.2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ureq = { version = "3", features = ["json"] }
url = "2"

[dev-dependencies]
env_logger = "0.11"
